# tsh

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: ast.h  convert.h  lex.yy.h  list.h  op.h  tsh.h  tsh.tab.h  vm.h
src/: CMakeLists.txt  Makefile  ast.c  cmake_install.cmake  convert.c  lex.yy.c  list.c  stage.tsh.y  tsh.c  tsh.l  tsh.tab.c  tsh.y  vm.c
